[package]
name = "doileakreferer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-warp"] }
askama_warp = "0.13"
git-version = "0.3.5"
tokio = { version = "1", features = ["full"] }
warp = "0.3.5"
